--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "immutability-helper": "^3.0.1",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "sort-by": "^1.2.0"
   },
   "scripts": {
     "css-build": "node-sass --omit-source-map-url src/mystyles.scss public/css/mystyles.css",
@@ -35,6 +44,7 @@
   },
   "devDependencies": {
     "bulma": "^0.7.5",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "redux-devtools": "^3.5.0"
   }
 }
